[tool.poetry]
name = "moonraker"
version = "0.8.0"
description = "API Server for Klipper"
authors = ["Patrick White <1275985+packysauce@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
Jinja2 = "3.0.3"
Pillow = "9.0.0"
dbus-next = "0.2.3"
distro = "1.5.0"
inotify-simple = "1.3.5"
libnacl = "1.7.2"
lmdb = "1.2.1"
paho-mqtt = "1.5.1"
preprocess-cancellation = "0.1.6"
pycurl = "7.44.1"
pyserial-asyncio = "0.6"
python = "^3.8"
streaming-form-data = "1.8.1"
tornado = "6.1.0"
zeroconf = "0.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
